@@ -5,20 +5,12 @@ configurations {
 dependencies {
     implementation(rootProject)
     implementation(project(':bus-testjars'))
-    implementation('cpw.mods:modlauncher:10.0.+')
-    implementation('cpw.mods:securejarhandler:2.0.+')
     implementation('org.junit.jupiter:junit-jupiter-engine:5.8.+')
     implementation('org.apache.logging.log4j:log4j-core:2.17.1')
     implementation('org.apache.logging.log4j:log4j-api:2.17.1')
-    implementation('org.ow2.asm:asm:9.2')
-    implementation('org.ow2.asm:asm-tree:9.2')
-    implementation('org.ow2.asm:asm-commons:9.2')
     implementation('org.openjdk.jmh:jmh-core:1.35')
-    implementation('cpw.mods:bootstraplauncher:1.1.0')
     jmhOnly('org.openjdk.jmh:jmh-core:1.35')
     jmhOnly('org.openjdk.jmh:jmh-generator-annprocess:1.35')
-    jmhOnly('cpw.mods:bootstraplauncher:1.1.0')
-    jmhOnly('cpw.mods:securejarhandler:2.0.+')
     jmhOnly(sourceSets.main.output)
     compileOnly('org.jetbrains:annotations:23.0.0')
     runtimeOnly('org.apiguardian:apiguardian-api:1.1.2')
@@ -34,8 +26,6 @@ tasks.register('jmh', JavaExec).configure {
         '-p', sourceSets.main.runtimeClasspath.asPath,
         '--add-modules', 'ALL-MODULE-PATH',
         '--add-exports', 'net.neoforged.bus.jmh/net.neoforged.bus.benchmarks.jmh_generated=jmh.core',
-        '--add-opens', 'java.base/java.lang.invoke=cpw.mods.securejarhandler',
-        '--add-opens', 'java.base/java.lang.invoke=net.neoforged.bus',
     ]
     classpath = files(configurations.jmhOnly.asPath)
     mainClass = 'org.openjdk.jmh.Main'
@@ -49,4 +39,5 @@ tasks.register('jmh', JavaExec).configure {
     args    '-rff', project.file("${rootProject.buildDir}/jmh_results.txt")  // results file
     args    'net.neoforged.bus.benchmarks.FewListenersBenchmark'
     args    'net.neoforged.bus.benchmarks.ManyListenersBenchmark'
+    args    'net.neoforged.bus.benchmarks.ManyDifferentListenersBenchmark'
 }
